# fastapi

./: Dockerfile  docker-compose.development.yml  docker-compose.production.yml  pyproject.toml
.devcontainer/: devcontainer.json
src/api/: db.py  main.py
src/api/cruds/: done.py  task.py
src/api/models/: task.py
src/api/routers/: done.py  task.py
src/api/schemas/: done.py  task.py
src/tests/: test_main.py
